<resources>
    <string name="app_name">ShoeStore</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_password_label">Password:</string>
    <string name="login_email_label">Email:</string>
    <string name="login_email_hint">example@email.com</string>
    <string name="login_password_hint">0-9, a-z, A-Z, and/or !@#$%</string>
    <string name="login_signin_text_button">Sign In</string>
    <string name="login_signup_text_button">Sign Up</string>
    <string name="welcome_title_text">Welcome to</string>
    <string name="welcome_text_button">Continue</string>
    <string name="welcome_message_text">Nick\'s Shoe Warehouse</string>
    <string name="instructions_continue_text_button">On To The Shoes</string>
    <string name="instructions_title_text">How it Works.</string>
    <string name="instructions_message_text">This where you add instructions</string>
    <string name="shoe_detail_name_label">Name:</string>
    <string name="shoe_detail_name_hint">Tracker, Sprinter, Training, Etc.</string>
    <string name="shoe_detail_company_label">Company:</string>
    <string name="shoe_detail_size_hint">1-15</string>
    <string name="shoe_detail_description_label">Description:</string>
    <string name="shoe_detail_description_hint">Light Weight, Comfortable, Supoortive</string>
    <string name="shoe_detail_save_text_button">Save</string>
    <string name="shoe_detail_cancel_text_button">Cancel</string>
    <string name="shoe_list_list_text">The Shoe List Goes Here</string>
    <string name="navigation_welcome_label">Welcome</string>
    <string name="navigation_instruction_label">Instructions</string>
    <string name="navigation_shoe_list_label">Shoe List</string>
    <string name="navigation_shoe_detial_label">Shoe Detail</string>
    <string name="item_name_shoe_list_text">Test</string>
    <string name="menu_logout">Logout</string>
</resources>
