<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ShoeDetailFragment">

    <data>
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.viewmodels.ShoeDetailViewModel" />
    </data>

    <!--Using Linear Layouts to group the Label and Edit Text make it easier when notifying the user
    that they missed an entry-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/shoe_detail_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/shoe_detail_name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_detail_name_label" />

            <EditText
                android:id="@+id/shoe_detail_name_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/shoe_detail_name_hint"
                android:text="@={shoeViewModel.shoeName}"
                android:inputType="text"
                android:minWidth="48dp"
                android:minHeight="48dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/shoe_detail_company_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/shoe_detail_name_layout"
            app:layout_constraintTop_toBottomOf="@id/shoe_detail_name_layout">

            <TextView
                android:id="@+id/shoe_detail_company_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_detail_company_label" />

            <EditText
                android:id="@+id/shoe_detail_company_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Nike, Adidas, Vans, Etc."
                android:text="@={shoeViewModel.shoeCompany}"
                android:inputType="text"
                android:minWidth="48dp"
                android:minHeight="48dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/shoe_detail_size_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/shoe_detail_company_layout"
            app:layout_constraintTop_toBottomOf="@id/shoe_detail_company_layout">

            <TextView
                android:id="@+id/shoe_detail_size_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Size:" />

            <EditText
                android:id="@+id/shoe_detail_size_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/shoe_detail_size_hint"
                android:inputType="number"
                android:text="@={shoeViewModel.shoeSize}"
                android:minWidth="48dp"
                android:minHeight="48dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/shoe_detail_description_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/shoe_detail_size_layout"
            app:layout_constraintTop_toBottomOf="@id/shoe_detail_size_layout">

            <TextView
                android:id="@+id/shoe_detail_description_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_detail_description_label" />

            <EditText
                android:id="@+id/shoe_detail_description_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/shoe_detail_description_hint"
                android:text="@={shoeViewModel.shoeDescription}"
                android:inputType="text"
                android:minWidth="48dp"
                android:minHeight="48dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/shoe_detail_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_detail_save_text_button"
            app:layout_constraintStart_toStartOf="@id/shoe_detail_description_layout"
            app:layout_constraintTop_toBottomOf="@id/shoe_detail_description_layout" />

        <Button
            android:id="@+id/shoe_detail_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_detail_cancel_text_button"
            app:layout_constraintEnd_toEndOf="@id/shoe_detail_description_layout"
            app:layout_constraintTop_toBottomOf="@id/shoe_detail_description_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>